--- a/Index.html
+++ b/Index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Reformas de Red</title>
+    <title>Tabla de Conexiones Montantes FTTH</title>
 </head>
 <!-- CSS only -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -49,8 +49,8 @@
                     <div class="col-12 position-relative">
                         <div class="row">
                             <div class="input-group">
-                                <label for="TIPO" class="col-sm-2 col-form-label text-start">Tipo de Diseño:</label>
-                                <div class="col-sm-4">
+                                <label for="TIPO" class="col-sm-2 col-form-label text-center">Tipo de Diseño:</label>
+                                <div class="col-sm-2">
                                     <select class="form-select" id="TIPO" required>
                                         <option selected disabled value="">Seleccione</option>
                                         <option value="1">ARMADO</option>
@@ -61,7 +61,7 @@
                                     </div>
                                 </div>
                                 <label for="NRISER" class="col-sm-2 col-form-label text-end">Nro RISER: </label>
-                                <div class="col-sm-2 ms-2">
+                                <div class="col-sm-1 ms-2">
                                     <select class="form-select" id="NRISER" required>
                                         <option selected disabled value="">Seleccione</option>
                                         <option value="1">1</option>
@@ -75,12 +75,45 @@
                                         ¡Debes ingresar el Tipo de Diseño!
                                     </div>
                                 </div>
+                                <label for="DIRECCION" class="col-sm-2 col-form-label text-center">Direccion del
+                                    Diseño:</label>
+                                <div class="col-sm-2">
+                                    <select class="form-select" id="DIRECCION" required>
+                                        <option selected disabled value="">Seleccione</option>
+                                        <option value="1">CRECIENTE</option>
+                                        <option value="2">DECRECIENTE</option>
+                                    </select>
+                                    <div class="invalid-tooltip">
+                                        ¡Debes indicar la Direccion del
+                                        Diseño!
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
 
                     <div id="RISERCAJAS" class="col-12 position-relative">
                     </div>
+
+                    <div class="col-12 position-relative">
+                        <div class="row">
+                            <div class="input-group">
+
+                                <label for="PARKING" class="col-sm-2 col-form-label text-end">Posee PARKING: </label>
+                                <div class="col-sm-1 ms-2">
+                                    <select class="form-select" id="PARKING" required>
+                                        <option selected disabled value="">Seleccione</option>
+                                        <option value="SI">SI</option>
+                                        <option value="NO">NO</option>
+                                    </select>
+                                    <div class="invalid-tooltip">
+                                        ¡Debes ingresar si el Tipo de Caja posee Parking o no!
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
 
                     <div class="col-12 pt-2">
                         <div class="row">
@@ -96,9 +129,10 @@
                     </div>
                     <div class="col-12 pt-2">
                         <div class="col-6 offset-sm-3 d-grid gap-2">
-                            <button id="GIRAR" type="button" class="btn btn-primary" hidden>GIRAR</button>
+                            <button id="GIRAR" type="button" class="btn btn-primary" hidden>GUARDAR</button>
                         </div>
                     </div>
+
                 </form>
 
             </div>
@@ -141,6 +175,7 @@
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
         <script src="./JavaScript.html.js"></script>
+        <script src="/html2canvas.js" type="text/javascript"></script>
         <!---------<?!= include('JavaScript'); ?>---->
 
 </body>
