--- a/Index.html
+++ b/Index.html
@@ -13,6 +13,56 @@
 
 <body>
 
+    <!------------------------------  Boton de Manual flotante -------------------------->
+
+    <script src="https://kit.fontawesome.com/e64aa124f5.js" crossorigin="anonymous"></script>
+
+    <a href="https://drive.google.com/file/d/12ZT_GgKx9q0hIhkQEa0e9snUZ7ZqvZeg/view" target="_blank" class="btn-ayuda"
+        data-bs-toggle="tooltip" data-bs-placement="top" title="Manual">
+        <i class="fa-solid fa-book"></i>
+    </a>
+
+    <style>
+        /*--------------------------------------------------------------
+        # btn-ayuda
+        --------------------------------------------------------------*/
+
+        .btn-ayuda {
+            position: fixed;
+            width: 55px;
+            height: 55px;
+            line-height: 55px;
+            background: #f3f5fa;
+            border-radius: 50px;
+            bottom: 30px;
+            right: 30px;
+            color: #0c3c53;
+            font-size: 30px;
+            text-align: center;
+            box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
+            z-index: 100;
+        }
+    </style>
+
+    <!------------------------------- Alerta del Manual Toast ------------------------>
+    <!------------------------------- se debe activar desde el Js ------------------------>
+
+    <div class="col-12">
+        <div class="position-fixed bottom-0 end-0 p-3" style="z-index: 1">
+            <div id="liveToast" class="toast hide text-bg-danger" role="alert" aria-live="assertive" aria-atomic="true">
+                <div class="toast-header">
+                    <strong class="me-auto">AYUDA</strong>
+                    <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+                </div>
+                <div class="toast-body">
+                    Manual de Funcionamiento
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!----------------------------------------------------------------------------------->
+
 
     <div class="container-xxl text-center">
 
@@ -172,7 +222,13 @@
 
 
 
-
+        <!-- JavaScript Bundle with Popper -->
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+            integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
+            crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js"
+            integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk"
+            crossorigin="anonymous"></script>
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
         <script src="./JavaScript.html.js"></script>
         <script src="/html2canvas.js" type="text/javascript"></script>
