cambio manual pdf => docs

--- a/Index.html
+++ b/Index.html
@@ -17,8 +17,8 @@
 
     <script src="https://kit.fontawesome.com/e64aa124f5.js" crossorigin="anonymous"></script>
 
-    <a href="https://drive.google.com/file/d/12ZT_GgKx9q0hIhkQEa0e9snUZ7ZqvZeg/view" target="_blank" class="btn-ayuda"
-        data-bs-toggle="tooltip" data-bs-placement="top" title="Manual">
+    <a href="https://docs.google.com/document/d/1xgl1OWyUq3cJoeBhjVf1p8M3ze6l9SI6xU2M75OC2f4/edit" target="_blank"
+        class="btn-ayuda" data-bs-toggle="tooltip" data-bs-placement="top" title="Manual">
         <i class="fa-solid fa-book"></i>
     </a>
 
